packages/cli/src/__tests__/fixtures/multi-schema-files/invalid/invalid_config_blocks/prisma/schema/config.prisma
generator client {
  provider        = "prisma-client-js"
  previewFeatures = ["prismaSchemaFolder"]
}

datasource db {
  provider = "sqlite"
  custom   = "attr"
  url      = "file:./dev.db"
}
